crates/web/src/snapshots/sanic_web__tests__a_pr_page_shows_drafts_in_their_diff_and_marks_the_pr_seen.snap
---
source: crates/web/src/tests.rs
expression: "readable(&f, &page.body)"
---
<!DOCTYPE html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
<meta name="htmx-config" content="{&quot;includeIndicatorStyles&quot;:false,&quot;allowEval&quot;:false,&quot;allowScriptTags&quot;:false}">
<title>Add the thing · sanic-review</title>
<link rel="icon" type="image/svg+xml" href="/assets/favicon.svg">
<link rel="stylesheet" href="/assets/style.css">
<link rel="stylesheet" href="/assets/syntax.css">
<script src="/assets/htmx.min.js" defer>
</script>
<script src="/assets/app.js" defer>
</script>
</head>
<body data-page="pr" hx-headers="{&quot;x-csrf-token&quot;:&quot;<token>&quot;}">
<header class="topbar">
<a class="home" href="/">sanic-review</a>
<span class="crumb">/ <a href="/pr/org/repo/7">org/repo#7</a>
</span>
<span class="counts" id="counts">
<a class="qlink" href="/queue" title="the run queue">
<b>0</b> queued · <b>0</b> running</a> · <b class="cnt">3</b> pending drafts <span class="muted-sep">|</span> <a href="/settings">settings</a> · <span class="k">?</span> keys</span>
</header>
<main>
<div class="prh">
<h1>Add the thing</h1>
<div class="meta">
<a class="ref" href="https://github.com/org/repo/pull/7" title="https://github.com/org/repo/pull/7">org/repo#7 ↗</a>
<span> · alice</span> · <span class="chip ok">drafted</span> · <span class="state act">1 unanswered</span>
<span class="sp" id="pr-actions" data-ignore="/pr/org/repo/7/ignore" data-chat="#chat">
<a class="btn" href="/pr/org/repo/7/runs/1/regenerate" data-dialog title="Revise this review with the agent, from your instruction">Agent…</a>
<a class="btn" href="/pr/org/repo/7/ignore">Ignore by title<span class="k">i</span>
</a>
<a class="btn" href="#chat">Chat<span class="k">c</span>
</a>
<form class="archive" method="post" action="/pr/org/repo/7/archive">
<input type="hidden" name="csrf" value="<token>">
<input type="hidden" name="archived" value="true">
<input type="hidden" name="next" value="pr">
<button class="btn" type="submit">Archive<span class="k">x</span>
</button>
</form>
</span>
</div>
<div class="subnav">
<details class="description">
<summary>Description</summary>
<div class="md">
<p>Add the thing, in detail.</p>
</div>
</details>
<details class="runs">
<summary>Run 1 of 1 · <time> · reviewed <code>head7</code>
</summary>
<ol reversed>
<li class="current">
<a href="/pr/org/repo/7?run=1">run 1</a> at <code>head7</code> · <time> · <span class="ok">succeeded</span>
</li>
</ol>
</details>
</div>
</div>
<form class="rbar" id="review-bar" method="post" action="/pr/org/repo/7/runs/1/preview">
<input type="hidden" name="csrf" value="<token>">
<span class="tally">
<b data-count="pending">3</b> pending · <b class="ok" data-count="accepted">0</b> accepted · <b data-count="rejected">0</b> rejected</span>
<span class="sp">
<span class="seg">
<label>
<input type="radio" name="event" value="COMMENT">Comment</label>
<label>
<input type="radio" name="event" value="REQUEST_CHANGES" checked>Request changes<span class="sugg" title="The agent's suggestion. It never suggests approving.">suggested</span>
</label>
<label>
<input type="radio" name="event" value="APPROVE">Approve</label>
</span>
<button class="btn go" id="preview" type="submit">Preview the review<span class="k">p</span>
</button>
</span>
</form>
<div class="threads-bar" id="existing">
<span class="lead">💬</span>
<span>
<b>1</b> existing review thread · <b>0</b> overlap your drafts</span>
<a class="threads-rest" href="#threads">1 thread doesn't overlap a draft</a>
</div>
<nav class="views" id="views">
<a class="cur" href="/pr/org/repo/7?view=drafts" data-view="drafts">Drafts</a>
<a href="/pr/org/repo/7?view=files" data-view="files">Files changed <span class="cnt">1</span>
</a>
<span class="k">f</span>
</nav>
<section id="drafts">
<article class="draft dc pending summary" id="draft-1">
<div class="h">
<span class="anc">Summary</span>
<span class="tag-sum">the review body</span>
<span class="sp">
<form class="decide" method="post" action="/drafts/1/status" hx-post="/drafts/1/status" hx-target="closest article" hx-swap="outerHTML" hx-sync="closest article:queue all">
<input type="hidden" name="csrf" value="<token>">
<button class="btn" name="status" value="accepted">Accept<span class="k">y</span>
</button>
<button class="btn" name="status" value="rejected">Reject<span class="k">n</span>
</button>
</form>
</span>
</div>
<div class="body" data-edit title="click or e to edit">
<div class="md">
<p>Mostly fine.</p>
</div>
</div>
<form class="edit" method="post" action="/drafts/1/edit" hx-post="/drafts/1/edit" hx-trigger="change" hx-target="closest article" hx-swap="outerHTML" hx-sync="closest article:queue all">
<input type="hidden" name="csrf" value="<token>">
<textarea name="body" rows="4">Mostly fine.</textarea>
<button class="btn save" type="submit">Save</button>
</form>
<details class="revise">
<summary class="btn" title="Revise just this draft with the agent, from your note">Revise…<span class="k">a</span>
</summary>
<form method="post" action="/drafts/1/revise">
<input type="hidden" name="csrf" value="<token>">
<textarea name="instruction" rows="2" required placeholder="e.g. not true because …; focus on the fix; reword">
</textarea>
<div class="go">
<button class="btn go" type="submit">Revise with the agent</button>
<span class="dim">Spends tokens. The result is a new run: this draft revised or dropped, the others as they stand.</span>
</div>
</form>
</details>
</article>
<article class="draft dc pending" id="draft-2">
<div class="h">
<a class="anc" href="https://github.com/org/repo/pull/7/files#diff-b1a35a68f14e696205874893c07fd24fdb88882b47c23cc0e0c80a30c7d53759R3" title="On GitHub, at the reviewed commit">src/lib.rs:3</a>
<span class="sev major">major</span>
<span class="dim conf">high conf.</span>
<span class="sp">
<form class="decide" method="post" action="/drafts/2/status" hx-post="/drafts/2/status" hx-target="closest article" hx-swap="outerHTML" hx-sync="closest article:queue all">
<input type="hidden" name="csrf" value="<token>">
<button class="btn" name="status" value="accepted">Accept<span class="k">y</span>
</button>
<button class="btn" name="status" value="rejected">Reject<span class="k">n</span>
</button>
</form>
</span>
</div>
<table class="diff">
<tr class="ctx">
<td class="num">1</td>
<td class="num">1</td>
<td class="code">
<span class="sign"> </span>fn main() {</td>
</tr>
<tr class="del">
<td class="num">2</td>
<td class="num">
</td>
<td class="code">
<span class="sign">-</span>    let n = 1;</td>
</tr>
<tr class="add">
<td class="num">
</td>
<td class="num">2</td>
<td class="code">
<span class="sign">+</span>    let n = 2;</td>
</tr>
<tr class="add anchor">
<td class="num">
</td>
<td class="num">3</td>
<td class="code">
<span class="sign">+</span>    let m = n + 1;</td>
</tr>
<tr class="ctx">
<td class="num">3</td>
<td class="num">4</td>
<td class="code">
<span class="sign"> </span>    println!(&quot;{n}&quot;);</td>
</tr>
<tr class="ctx">
<td class="num">4</td>
<td class="num">5</td>
<td class="code">
<span class="sign"> </span>}</td>
</tr>
</table>
<div class="body" data-edit title="click or e to edit">
<div class="md">
<p>Why <code>m</code>?</p>
</div>
</div>
<form class="edit" method="post" action="/drafts/2/edit" hx-post="/drafts/2/edit" hx-trigger="change" hx-target="closest article" hx-swap="outerHTML" hx-sync="closest article:queue all">
<input type="hidden" name="csrf" value="<token>">
<textarea name="body" rows="4">Why `m`?</textarea>
<button class="btn save" type="submit">Save</button>
</form>
<details class="revise">
<summary class="btn" title="Revise just this draft with the agent, from your note">Revise…<span class="k">a</span>
</summary>
<form method="post" action="/drafts/2/revise">
<input type="hidden" name="csrf" value="<token>">
<textarea name="instruction" rows="2" required placeholder="e.g. not true because …; focus on the fix; reword">
</textarea>
<div class="go">
<button class="btn go" type="submit">Revise with the agent</button>
<span class="dim">Spends tokens. The result is a new run: this draft revised or dropped, the others as they stand.</span>
</div>
</form>
</details>
</article>
<article class="draft dc pending" id="draft-3">
<div class="h">
<a class="anc" href="https://github.com/org/repo/blob/head7/src/gone.rs?plain=1#L40" title="On GitHub, at the reviewed commit">src/gone.rs:40</a>
<span class="sev major">major</span>
<span class="dim conf">high conf.</span>
<span class="tag-body" title="Not on a line of the diff, so GitHub won't take it inline. If you accept it, it's posted in the review body.">not in the diff → goes in the body</span>
<span class="sp">
<form class="decide" method="post" action="/drafts/3/status" hx-post="/drafts/3/status" hx-target="closest article" hx-swap="outerHTML" hx-sync="closest article:queue all">
<input type="hidden" name="csrf" value="<token>">
<button class="btn" name="status" value="accepted">Accept<span class="k">y</span>
</button>
<button class="btn" name="status" value="rejected">Reject<span class="k">n</span>
</button>
</form>
</span>
</div>
<div class="body" data-edit title="click or e to edit">
<div class="md">
<p>This file isn't in the diff.</p>
</div>
</div>
<form class="edit" method="post" action="/drafts/3/edit" hx-post="/drafts/3/edit" hx-trigger="change" hx-target="closest article" hx-swap="outerHTML" hx-sync="closest article:queue all">
<input type="hidden" name="csrf" value="<token>">
<textarea name="body" rows="4">This file isn't in the diff.</textarea>
<button class="btn save" type="submit">Save</button>
</form>
<details class="revise">
<summary class="btn" title="Revise just this draft with the agent, from your note">Revise…<span class="k">a</span>
</summary>
<form method="post" action="/drafts/3/revise">
<input type="hidden" name="csrf" value="<token>">
<textarea name="instruction" rows="2" required placeholder="e.g. not true because …; focus on the fix; reword">
</textarea>
<div class="go">
<button class="btn go" type="submit">Revise with the agent</button>
<span class="dim">Spends tokens. The result is a new run: this draft revised or dropped, the others as they stand.</span>
</div>
</form>
</details>
</article>
</section>
<section id="threads">
<h2>Review threads · <span class="hot">1 waiting on you</span>
</h2>
<div class="thread waiting">
<div class="th">
<span class="anc">src/lib.rs:2</span>
<span class="dim" title="Lines of another commit than the one reviewed, so they aren't compared with the drafts'.">on another commit</span>
<span class="chip dim" title="You started it on GitHub.">yours</span>
<span class="chip hot" title="Someone's comment here is newer than your last answer.">waiting on you</span>
<span class="dim">2 comments</span>
</div>
<ul class="said">
<li>
<b>me</b>
<div class="md">
<p>hm</p>
</div>
</li>
<li>
<b>alice</b>
<div class="md">
<p>hm</p>
</div>
</li>
</ul>
<p class="thread-act">
<a class="linkbtn" data-dialog href="/pr/org/repo/7/runs/1/regenerate?about=t1">Agent…</a>
<span class="dim">drafts an answer you review before it's posted</span>
</p>
</div>
</section>
<section class="chat" id="chat">
<h2>Chat with the reviewer <span class="dim">run 1 · paste into a terminal</span>
</h2>
<div class="copyrow">
<pre id="chat-command">$EXE chat 1 --config '/config/sanic review.toml' --data-dir $DATA</pre>
<button class="btn" type="button" data-copy="#chat-command" aria-describedby="chat-command">Copy</button>
</div>
<p class="note">Checks the review's worktree out again and removes it when the chat ends. Read-only, no GitHub token; add <code>--allow-edits</code> to let it edit that copy.</p>
<details>
<summary>Run claude yourself instead</summary>
<ol>
<li>
<span>Check out the worktree and print the claude line</span>
<div class="copyrow">
<pre id="print-command">$EXE chat --print-command 1 --config '/config/sanic review.toml' --data-dir $DATA</pre>
<button class="btn" type="button" data-copy="#print-command" aria-describedby="print-command">Copy</button>
</div>
</li>
<li>
<span>Run it</span>
<div class="copyrow">
<pre id="claude-command">cd $DATA/worktrees/1 &amp;&amp; env -u GITHUB_TOKEN -u GH_TOKEN -u GITHUB_ENTERPRISE_TOKEN -u GH_ENTERPRISE_TOKEN '/opt/my claude' --resume sess-7 --restricted --strict-mcp-config --tools Read,Grep,Glob --allowedTools Read,Grep,Glob --append-system-prompt 'You are in a chat, resumed from a sanic-review review session, with the reviewer who triages your drafts. You cannot post to GitHub, run `gh` or reach the network. Your drafts are edited, accepted and posted from the sanic-review dashboard, not from here: to change one, say what you would change, and the reviewer makes it there or asks you to revise it. The comments by the reviewer that you were shown, those posted from an earlier draft of the review included, are points the reviewer made, some first drafted by you: never agree with them or credit them as if someone else had made them.' --add-dir $DATA/runs/1 --add-dir /skills/review</pre>
<button class="btn" type="button" data-copy="#claude-command" aria-describedby="claude-command">Copy</button>
</div>
</li>
<li>
<span>Remove the worktree afterwards</span>
<div class="copyrow">
<pre id="cleanup-command">$EXE chat --cleanup 1 --config '/config/sanic review.toml' --data-dir $DATA</pre>
<button class="btn" type="button" data-copy="#cleanup-command" aria-describedby="cleanup-command">Copy</button>
</div>
</li>
</ol>
</details>
</section>
<p class="help-foot">
<span class="k">j</span>
<span class="k">k</span> draft · <span class="k">e</span> edit (<span class="k">Esc</span> saves) · <span class="k">y</span> accept · <span class="k">n</span> reject · <span class="k">u</span> undo · <span class="k">a</span> revise · <span class="k">f</span> files · <span class="k">p</span> preview · <span class="k">t</span> threads · <span class="k">r</span>
<span class="k">x</span>
<span class="k">i</span>
<span class="k">c</span> act on the PR · <span class="k">q</span> index</p>
</main>
<div class="overlay" id="help" hidden>
<div class="popup">
<h2>Keys</h2>
<table>
<tr>
<th>
<kbd>q</kbd>
</th>
<td>close this help; otherwise back to the index</td>
</tr>
<tr>
<th>
<kbd>Tab, Shift-Tab</kbd>
</th>
<td>next, previous list</td>
</tr>
<tr>
<th>
<kbd>j/k, Down/Up</kbd>
</th>
<td>move in the list</td>
</tr>
<tr>
<th>
<kbd>g/G, Home/End</kbd>
</th>
<td>first, last row</td>
</tr>
<tr>
<th>
<kbd>Enter</kbd>
</th>
<td>open the selected PR</td>
</tr>
<tr>
<th>
<kbd>r</kbd>
</th>
<td>review now: failed, held or skipped (asks first)</td>
</tr>
<tr>
<th>
<kbd>x</kbd>
</th>
<td>archive or unarchive the selected PR</td>
</tr>
<tr>
<th>
<kbd>X</kbd>
</th>
<td>show or hide archived PRs</td>
</tr>
<tr>
<th>
<kbd>Q</kbd>
</th>
<td>the run queue: what's running and what's next</td>
</tr>
<tr>
<th>
<kbd>K/J</kbd>
</th>
<td>in the queue: move the selected queued run up, down</td>
</tr>
<tr>
<th>
<kbd>c</kbd>
</th>
<td>in the queue: cancel the selected run (asks first)</td>
</tr>
<tr>
<th>
<kbd>i</kbd>
</th>
<td>skip PRs with titles like the selected one</td>
</tr>
<tr>
<th>
<kbd>v</kbd>
</th>
<td>who reviewed the selected PR, and when; Esc closes</td>
</tr>
<tr>
<th>
<kbd>d</kbd>
</th>
<td>the selected PR's review run and drafts; Esc closes</td>
</tr>
<tr>
<th>
<kbd>c</kbd>
</th>
<td>chat with the agent that reviewed it: shows the command</td>
</tr>
<tr>
<th>
<kbd>f</kbd>
</th>
<td>on a PR page: the drafts, or the files changed with the drafts in them</td>
</tr>
<tr>
<th>
<kbd>s</kbd>
</th>
<td>in the files changed: one column, or old beside new</td>
</tr>
<tr>
<th>
<kbd>t</kbd>
</th>
<td>on a PR page: jump to its review threads</td>
</tr>
<tr>
<th>
<kbd>a</kbd>
</th>
<td>on a PR page: revise the selected draft with the agent, from a note</td>
</tr>
<tr>
<th>
<kbd>?, Esc</kbd>
</th>
<td>show, close this help</td>
</tr>
</table>
<p class="dim">On a PR page j/k move between drafts, and r and a act on the PR. On a confirm page y confirms and Esc or q cancels.</p>
</div>
</div>
<div class="overlay" id="dialog" hidden>
<div class="popup dialog" role="dialog" aria-modal="true">
</div>
</div>
<div id="notice" hidden>
</div>
</body>
</html>
